@@ -1,0 +1,5 @@
+.text
+	callq	*%rax
+	call	*%rax
+	jmpq	*%rax
+	jmp	*%rax
